versioned_docs/version-8.1/apis-tools/tasklist-api/inputs/task-query.mdx
---
id: task-query
title: TaskQuery
hide_table_of_contents: false
---

export const Bullet = () => (
  <>
    <span
      style={{
        fontWeight: "normal",
        fontSize: ".5em",
        color: "var(--ifm-color-secondary-darkest)",
      }}
    >
      &nbsp;●&nbsp;
    </span>
  </>
);

export const SpecifiedBy = (props) => (
  <>
    Specification
    <a
      className="link"
      style={{ fontSize: "1.5em", paddingLeft: "4px" }}
      target="_blank"
      href={props.url}
      title={"Specified by " + props.url}
    >
      ⎘
    </a>
  </>
);

export const Badge = (props) => (
  <>
    <span class={"badge badge--" + props.class}>{props.text}</span>
  </>
);

Task query - query to get one page of tasks.

```graphql
input TaskQuery {
  state: TaskState
  assigned: Boolean
  assignee: String
  candidateGroup: String
  processDefinitionId: String
  processInstanceId: String
  taskDefinitionId: String
  pageSize: Int
  searchAfter: [String!]
  searchAfterOrEqual: [String!]
  searchBefore: [String!]
  searchBeforeOrEqual: [String!]
}
```

### Fields

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>state</b></code>](#)<Bullet />[`TaskState`](/docs/apis-tools/tasklist-api/enums/task-state) <Badge class="secondary" text="enum"/>

> State of the tasks

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>assigned</b></code>](#)<Bullet />[`Boolean`](/docs/apis-tools/tasklist-api/scalars/boolean) <Badge class="secondary" text="scalar"/>

> Are the tasks assigned?

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>assignee</b></code>](#)<Bullet />[`String`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="scalar"/>

> Who is assigned to the tasks?

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>candidateGroup</b></code>](#)<Bullet />[`String`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="scalar"/>

> given group is in candidate groups list

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>processDefinitionId</b></code>](#)<Bullet />[`String`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="scalar"/>

> Reference to process definition

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>processInstanceId</b></code>](#)<Bullet />[`String`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="scalar"/>

> Reference to process instance

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>pageSize</b></code>](#)<Bullet />[`Int`](/docs/apis-tools/tasklist-api/scalars/int) <Badge class="secondary" text="scalar"/>

> Size of tasks page (default: 50).

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>taskDefinitionId</b></code>](#)<Bullet />[`String`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="scalar"/>

> Task definition ID - what's the BPMN flow node?

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>searchAfter</b></code>](#)<Bullet />[`[String!]`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly after this values plus same sort values.

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>searchAfterOrEqual</b></code>](#)<Bullet />[`[String!]`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly after this values.

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>searchBefore</b></code>](#)<Bullet />[`[String!]`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly before this values plus same sort values.

#### [<code style={{ fontWeight: 'normal' }}>TaskQuery.<b>searchBeforeOrEqual</b></code>](#)<Bullet />[`[String!]`](/docs/apis-tools/tasklist-api/scalars/string) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Array of values copied from `sortValues` of one of the tasks, query will return page of tasks going directly before this values.

### Member of

[`tasks`](/docs/apis-tools/tasklist-api/queries/tasks) <Badge class="secondary" text="query"/>
